Fix Crisp links not showing up

--- a/content/themes/dude/sass/features/_crisp.scss
+++ b/content/themes/dude/sass/features/_crisp.scss
@@ -2,16 +2,6 @@ body {
   .crisp-client {
 
     a {
-      display: none !important;
-      visibility: hidden !important;
-      opacity: 0 !important;
-
-      * {
-        display: none !important;
-        visibility: hidden !important;
-        opacity: 0 !important;
-      }
-
       // Hide minimized chat by default
       &[data-maximized="false"] {
         display: none !important;
